upstream conditional compilation and semantic version

--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -68,7 +68,7 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	sexpm sexpm_test sexp js_json_test array_subtle_test  \
 	bytes_split_gpr_743_test module_splice_test hello.foo \
 	ffi_splice_test node_path_test js_string_test string_unicode_test node_fs_test\
-	flow_parser_reg_test	utf8_decode_test stream_parser_test condition_compilation_test
+	flow_parser_reg_test	utf8_decode_test stream_parser_test condition_compilation_test semver_test
 
 
 
