--- a/jscomp/others/Makefile
+++ b/jscomp/others/Makefile
@@ -18,7 +18,7 @@ else
 BS_FLAGS=  $(BS_COMMON_FLAGS) -bs-package-output lib/js 
 endif
 
-COMPFLAGS += $(BS_FLAGS)  -I ../runtime -I ../stdlib -w -40 -w -49
+COMPFLAGS += $(BS_FLAGS)  -I ../runtime -I ../stdlib -w -40 -w -49 -bin-annot
 
 
 
