--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "postinstall": "node scripts/config.js"
   },
   "name": "bs-platform",
-  "version": "1.1.2+dev",
+  "version": "1.2.0",
   "description": "bucklescript compiler, ocaml standard libary by bucklescript and its required runtime support",
   "repository": {
     "type": "git",
