--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -103,9 +103,14 @@ releasebuild:
 release:snapshot
 	$(MAKE) releasebuild
 
+## this target is 
+## shared with our bundled compiler
+## in this condition, `Config_whole_compiler.ml` is not configured
+## we reuse the compiler-libs
 world:
 	@echo "Making compiler"
-	$(MAKE) releasebuild
+	$(NATIVE) -g -inline 1000 -linkall  -w -a -I +compiler-libs -I bin ocamlcommon.cmxa  bin/compiler.mli bin/compiler.ml -o bin/bsc.exe
+	$(MAKE) -C bin -j 4 bspack.exe bsdep.exe bsppx.exe bspp.exe
 	@echo "Making compiler finished"
 	$(MAKE) libs
 
@@ -132,7 +137,7 @@ DEST_BIN=../bin
 install:
 	@echo "copy exe"
 	mkdir -p $(DEST_BIN) $(DEST)
-	cp  ./bin/bsc.exe ./bin/bsppx.exe  ./bin/bspack.exe ./bin/bsdep.exe ./bin/bsdep.exe $(DEST_BIN)
+	cp  ./bin/bsc.exe ./bin/bsppx.exe  ./bin/bspack.exe ./bin/bsdep.exe  $(DEST_BIN)
 	@echo "copy stdlib"
 	cp ./runtime/*.cmt* ./runtime/*.cmj* ./stdlib/*.cm* ./others/*.ml ./others/*.mli  ./others/*.cm* \
 	 ./runtime/js.ml  ./runtime/js.cmi ./runtime/js_unsafe.cmi ./runtime/js_null.ml ./runtime/js_null.cmi \
