--- a/jscomp/bin/Makefile
+++ b/jscomp/bin/Makefile
@@ -25,4 +25,4 @@ bspack.exe: config_bspack.mli config_bspack.ml bspack.mli bspack.ml
 	$(NATIVE) -w -a unix.cmxa  $^ -o $@
 
 
-all: bsppx.exe bspp.exe bsdep.exe bsc.exe bspack.exe
+all: bsppx.exe bspp.exe bsdep.exe bsc.exe bspack.exe bsbuild.exe
