auto-uncurry a curried function to an uncurried function. Note it is known that when you uncurry a curried function, its side effect will be delayed until all parameters supplied

--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -99,9 +99,13 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	oo_js_test_date\
 	functor_ffi\
 	typed_array_test\
+	bs_auto_uncurry\
 	gpr_1240_missing_unbox
 # bs_uncurry_test
 # needs Lam to get rid of Uncurry arity first 
+
+
+
 
 SOURCE_LIST :=  $(OTHERS)
 TESTS := $(addsuffix .cmj, $(SOURCE_LIST) )
