Renamed typed_array to js_typed_array and exposed it via Js.TypedArray
Signed-Off-By: Glenn Slotte <glenn@slotte.net>

--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -98,7 +98,7 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	name_mangle_test\
 	oo_js_test_date\
 	functor_ffi\
-	typed_array_test\
+	js_typed_array_test\
 	gpr_1240_missing_unbox\
 	js_null_undefined_test js_null_test js_undefined_test\
 	gpr_1268\
