Moved modules from  to  to resolve dependency cycles

--- a/jscomp/others/Makefile
+++ b/jscomp/others/Makefile
@@ -5,8 +5,8 @@ COMPILER=../bin/bsc.exe
 MAP_FILES= node bs
 
 SOURCE_LIST= node_path node_fs node_process dict node_module js_array js_string \
-	js_re js_null_undefined node_buffer js_types js_json js_obj bs_dyn bs_dyn_lib \
-	node_child_process js_boolean js_math js_dict js_date
+	js_re node_buffer js_types js_json bs_dyn bs_dyn_lib \
+	node_child_process js_math js_dict js_date
 
 $(addsuffix .cmj, $(SOURCE_LIST)): $(addsuffix .cmj, $(MAP_FILES))
 
