experimental unicode support

--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -141,7 +141,7 @@ OUNIT_TESTS_SRCS =  ounit_tests_util \
 	ounit_vec_test \
 	ounit_data_random\
 	ounit_string_tests\
-	ounit_utf8_tests\
+	ounit_utf8_test\
 	ounit_topsort_tests\
 	ounit_sexp_tests\
 	ounit_int_vec_tests\
