colorful command output, avoid revisiting (dfs backtracking, still need improvement)

--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -169,6 +169,7 @@ EXT_SRCS = ext_util\
 	ext_file_pp ext_format \
 	hashtbl_gen \
 	ext_string \
+	ext_color \
 	ext_utf8\
 	ext_js_regex\
 	string_hashtbl\
